alignment issue fixes

--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -111,16 +111,16 @@
 				<li class="blue" *ngIf="i==0">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="orange" *ngIf="i==1">	
+				<li class="oranges" *ngIf="i==1">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="purple" *ngIf="i==2">	
+				<li class="purples" *ngIf="i==2">	
 					<span>{{items.title}}</span>
 				</li>
 				<li class="red" *ngIf="i==3">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="yallow" *ngIf="i==4">	
+				<li class="yellow" *ngIf="i==4">	
 					<span>{{items.title}}</span>
 				</li>
 				<li class="dblue" *ngIf="i==5">	
@@ -133,16 +133,16 @@
 				<li class="blue" *ngIf="i==7">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="orange" *ngIf="i==8">	
+				<li class="oranges" *ngIf="i==8">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="purple" *ngIf="i==9">	
+				<li class="purples" *ngIf="i==9">	
 					<span>{{items.title}}</span>
 				</li>
 				<li class="red" *ngIf="i==10">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="yallow" *ngIf="i==11">	
+				<li class="yellow" *ngIf="i==11">	
 					<span>{{items.title}}</span>
 				</li>
 				<li class="dblue" *ngIf="i==12">	
@@ -155,16 +155,16 @@
 				<li class="blue" *ngIf="i==14">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="orange" *ngIf="i==15">	
+				<li class="oranges" *ngIf="i==15">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="purple" *ngIf="i==16">	
+				<li class="purples" *ngIf="i==16">	
 					<span>{{items.title}}</span>
 				</li>
 				<li class="red" *ngIf="i==17">	
 					<span>{{items.title}}</span>
 				</li>
-				<li class="yallow" *ngIf="i==18">	
+				<li class="yellow" *ngIf="i==18">	
 					<span>{{items.title}}</span>
 				</li>
 				<li class="dblue" *ngIf="i==19">	
