--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1296,7 +1296,7 @@ a:hover {
     font-weight: 700;
     font-size: 13px;
     color: #465666;
-    margin-bottom: 7px;
+    margin-top: -5px;
 }
 .profile-card .pc-info h6 a{
     color: #465666;
