--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -92,7 +92,7 @@
 								<div *ngIf="!utilsHelperService.isEmptyObj(matchingUsers?.profile)" [ngClass]="(isMultipleMatches === true)?'col-lg-6 col-md-6 matches-8':'col-lg-12 col-md-12 matches-8'" >
 									<div class="info-box">
 										<div class="col-lg-12" *ngIf="!isMultipleMatches">
-											<div class="card job-card">
+											<div class="card job-card" style="height:120px;">
 												<div class="card-body">
 													<div class="row">
 														<div class="col-lg-8 col-md-8">
