--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -13,23 +13,23 @@
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
 				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
-			<button [disabled]="(!createCandidateForm.controls.educationExp.valid || checValue()===false)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2 && userInfo?.profile_completed===true" type="button"
+			<button [disabled]="(!createCandidateForm.controls.educationExp.valid || checValue()===false || createCandidateForm.controls.educationExp.value.sap_experience > createCandidateForm.controls.educationExp.value.experience  )" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2  && userInfo?.profile_completed ===true" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{"shared.updateNext" | translate}}
+				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
-			<button [disabled]="(!createCandidateForm.controls.educationExp.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2 && userInfo?.profile_completed===false" type="button"
+			<button [disabled]="(!createCandidateForm.controls.educationExp.valid || checValue()===false || createCandidateForm.controls.educationExp.value.sap_experience > createCandidateForm.controls.educationExp.value.experience || !userInfo?.profile_completed  )" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2 && userInfo?.profile_completed ===false" type="button"
+				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
+				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}{{checValue()}}
+			</button>
+			<button [disabled]="(!createCandidateForm.controls.skillSet.valid ||  checValue()===false)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 " type="button"
+				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
+				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+			</button>
+			<!--<button [disabled]="(!createCandidateForm.controls.skillSet.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo?.profile_completed===false" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
 				{{"shared.next" | translate}}
-			</button>
-			<button [disabled]="(!createCandidateForm.controls.skillSet.valid || checValue()===false)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo?.profile_completed===true" type="button"
-				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{"shared.updateNext" | translate}}
-			</button>
-			<button [disabled]="(!createCandidateForm.controls.skillSet.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo?.profile_completed===false" type="button"
-				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{"shared.next" | translate}}
-			</button>
-			<button  [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
+			</button>-->
+			<button  [disabled]="(!createCandidateForm.valid || !userInfo?.profile_completed || checValue()===false)" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
 				(click)="onToggleRegisterReview(true)">
 				{{"shared.submit" | translate }}
 			</button>
@@ -37,7 +37,7 @@
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="((currentTabInfo.tabNumber != 4) && userInfo?.profile_completed)">
 		<div class="form-group">
-			<button [disabled]="(!createCandidateForm.valid || checValue()===false)" (click)="onToggleRegisterReview(true)" type="button"
+			<button [disabled]="(!createCandidateForm.valid || checValue()===false ||createCandidateForm.controls.educationExp.value.sap_experience > createCandidateForm.controls.educationExp.value.experience)" (click)="onToggleRegisterReview(true)" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext">
 				{{"shared.update" | translate }}
 			</button>
