--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -13,32 +13,31 @@
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
 				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
-			<button [disabled]="(!createCandidateForm.controls.educationExp.valid || checValue()===false || createCandidateForm.controls.educationExp.value.sap_experience > createCandidateForm.controls.educationExp.value.experience  )" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2  && userInfo?.profile_completed ===true" type="button"
+			<button [disabled]="(!createCandidateForm.controls.educationExp.valid || checValue()===false)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2 && userInfo?.profile_completed===true" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+				{{"shared.updateNext" | translate}}
 			</button>
-			<button [disabled]="(!createCandidateForm.controls.educationExp.valid || (createCandidateForm.controls.educationExp.value.sap_experience > createCandidateForm.controls.educationExp.value.experience || (createCandidateForm.controls.educationExp.value.sap_experience==0 || createCandidateForm.controls.educationExp.value.experience==0) || createCandidateForm.controls.educationExp.value.current_employer=='' || createCandidateForm.controls.educationExp.value.current_employer_role=='' || createCandidateForm.controls.educationExp.value.domains_worked=='')&& createCandidateForm.controls.personalDetails.value.entry===false )" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2 && userInfo?.profile_completed ===false" type="button"
+			<button [disabled]="(!createCandidateForm.controls.educationExp.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2 && userInfo?.profile_completed===false" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+				{{"shared.next" | translate}}
 			</button>
-			<button [disabled]="(!createCandidateForm.controls.skillSet.valid ||  checValue()===false)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo.profile_completed===true " type="button"
+			<button [disabled]="(!createCandidateForm.controls.skillSet.valid || checValue()===false)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo?.profile_completed===true" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+				{{"shared.updateNext" | translate}}
 			</button>
-			<button [disabled]="(!createCandidateForm.controls.skillSet.valid 
-			||(checValue()===false || createCandidateForm.controls.skillSet.value.programming_skills=='' || createCandidateForm.controls.skillSet.value.hands_on_experience.length==0 )&& createCandidateForm.controls.personalDetails.value.entry===false )" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo?.profile_completed===false" type="button"
+			<button [disabled]="(!createCandidateForm.controls.skillSet.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3 && userInfo?.profile_completed===false" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+				{{"shared.next" | translate}}
 			</button>
-			<button  [disabled]="(!createCandidateForm.valid ||  checValue()===false || createCandidateForm.controls.jobPref.value.job_type.length==0)" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
+			<button  [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
 				(click)="onToggleRegisterReview(true)">
 				{{"shared.submit" | translate }}
 			</button>
 		</div>
 	</div>
-	<div class="col-lg-2 col-md-6" *ngIf="((currentTabInfo.tabNumber != 4) && userInfo?.profile_completed===true)">
+	<div class="col-lg-2 col-md-6" *ngIf="((currentTabInfo.tabNumber != 4) && userInfo?.profile_completed)">
 		<div class="form-group">
-			<button [disabled]="(!createCandidateForm.valid || checValue()===false ||createCandidateForm.controls.educationExp.value.sap_experience > createCandidateForm.controls.educationExp.value.experience || createCandidateForm.controls.jobPref.value.job_type.length==0)" (click)="onToggleRegisterReview(true)" type="button"
+			<button [disabled]="(!createCandidateForm.valid || checValue()===false)" (click)="onToggleRegisterReview(true)" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext">
 				{{"shared.update" | translate }}
 			</button>
