--- a/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.css
+++ b/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.css
@@ -7,6 +7,7 @@
 	background: linear-gradient(to right, #2CD7FF 0%, #3BC4FF 30%, #3171F3 60%, #1974F3 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+	text-shadow:0px 0px #0000;
 
     
 }
