--- a/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
+++ b/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
@@ -15,9 +15,9 @@
 </section> -->
 
 <section class="section login-section">
-  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'">
+  <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-12">
+      <div class="col-xl-8 col-lg-8 col-md-12">
         <div class="login-content">	
 		<div class="login_text">
 		<h1>{{"user.title" | translate }}</h1>
