time picker issue bug -fixing

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.css
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.css
@@ -21,6 +21,6 @@
     font-size: 12px;
 }
 
-/*input[type="time"]::-webkit-calendar-picker-indicator{
+input[type="time"]::-webkit-calendar-picker-indicator{
     display: none;
-}*/
+}
