--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -149,6 +149,7 @@
 						  <small class="text-danger"  *ngIf="maxError" > The end time must be greater than the start time </small>
 						 </div>
 						</div>
+				</div>	
 					
 			</div>
 		</div>
