1.Select remote option  and work time alignment issue -bug fixing

--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -39,7 +39,7 @@
 										</span><br>
 										</ng-container>
 									</h6>
-									<h6 class="font-weight-bold mb-2"*ngIf="postedJobsDetails?.min && postedJobsDetails?.max">{{"shared.timing" | translate}} : 
+									<h6 class="font-weight-bold mb-2"*ngIf="postedJobsDetails?.min && postedJobsDetails?.max"style="padding-top:0.5rem;">{{"shared.timing" | translate}} : 
 										<ng-container *ngIf="postedJobsDetails?.min ">
 											{{postedJobsDetails?.min | time}}
 										</ng-container>
