--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -148,7 +148,7 @@
 								<ngx-slider (userChangeEnd)="onFilterWithSalary($event)" [(value)]="minSalary" [(highValue)]="maxSalary" [options]="options"></ngx-slider>
 							</div>
 						</div>
-						<div class="card mt-4">
+						<!--<div class="card mt-4">
 							<div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
 								{{"shared.sapSkills" | translate}}    
 								<i class="fas fa-angle-down float-right pt-1"></i>
@@ -163,7 +163,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
