Remove sap skills in filter for employer

--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -281,7 +281,7 @@
             </div>
           </div>
          
-          <div class="card mt-4">
+         <!-- <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
              {{"shared.sapSkills" | translate }}    <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
@@ -297,7 +297,7 @@
 
               </div>
             </div>
-          </div>
+          </div>-->
           </div>
         </div>
       </div>
